[package]
name = "pair"
version = "0.1.0"
authors = ["MJ"]
edition = "2021"

[dependencies]
ink_primitives = { version = "4.0.0-alpha.1", default-features = false }
ink_metadata = { version = "4.0.0-alpha.1", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "4.0.0-alpha.1", default-features = false }
ink_storage = { version = "4.0.0-alpha.1", default-features = false }
ink_lang = { version = "4.0.0-alpha.1", default-features = false }
ink_prelude = { version = "4.0.0-alpha.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

erc20 = { path = "../erc20", default-features = false, features = ["ink-as-dependency"] }
# factory = { path = "../factory", default-features = false, features = ["ink-as-dependency"] }


[lib]
name = "pair"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info/std",

    "erc20/std",
    # "factory/std",
]
ink-as-dependency = []